# ember-trove

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  QWEN.md  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml
.claude/: ERRORS.md  POLICY.md  ROADMAP.md
.claude/patterns/: double-opt-patch.rs  navigate-reactive.rs  reactive-effect-debounce.rs  submit-trigger.rs
.claude/rules/: api.md  e2e.md  leptos.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cert-check.yml  cert-monitor.yml  ci.yml  release.yml
api/: Cargo.toml
api/src/: backup.rs  config.rs  main.rs  ssrf.rs  state.rs  tests.rs  webhook_dispatch.rs
api/src/admin/: cognito.rs
api/src/auth/: middleware.rs  oidc.rs  permissions.rs
api/src/notify/: mod.rs
api/src/object_store/: mod.rs  s3.rs
api/src/repo/: attachment.rs  edge.rs  editor_pref.rs  favorite.rs  graph.rs  mod.rs  node.rs  node_link.rs  node_version.rs  note.rs  permission.rs  pg_tests.rs  pkce.rs  search.rs  search_presets.rs  share_token.rs  task.rs  template.rs  webhook.rs
api/src/routes/: admin.rs  attachments.rs  auth.rs  backup.rs  edges.rs  editor_prefs.rs  export.rs  graph.rs  inbox.rs  metrics.rs  mod.rs  node_links.rs  nodes.rs  notes.rs  permissions.rs  search.rs  search_presets.rs  share.rs  tasks.rs  templates.rs  webhooks.rs
common/: Cargo.toml
common/src/: auth.rs  backup.rs  edge.rs  editor_pref.rs  graph_layout.rs  inbox.rs  keyboard.rs  lib.rs  markdown.rs  node.rs  note.rs  quickadd.rs  search.rs  task.rs  webhook.rs
deploy/: .env.local.example  Dockerfile.api  TLS-RENEWAL.md  docker-compose.e2e.yml  docker-compose.local-auth.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.local-auth.conf  nginx.prod.conf
deploy/k8s/: api-deployment.yaml  configmap.yaml  ui-deployment.yaml
deploy/keycloak/: realm-ember-trove.json
deploy/renewal-hooks/: reload-nginx.sh
docs/: deploy-aws.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: calendar.spec.ts  graph.spec.ts  my_day.spec.ts  palette.spec.ts  search.spec.ts  smoke.spec.ts  triage.spec.ts  webhooks.spec.ts
migrations/: 029_editor_prefs.sql  030_soft_delete_tasks_notes.sql
scripts/: dev-local.sh  e2e.sh  preserve-ghcr-tags.sh  verify.sh
scripts/hooks/: pre-commit  pre-push
ui/: Cargo.toml  input.css
ui/src/: app.rs  auth.rs  draft.rs  focus_note.rs  focus_task.rs  keyboard.rs  main.rs  markdown.rs
ui/src/api/: activity.rs  admin.rs  attachments.rs  auth.rs  backup.rs  edges.rs  editor_prefs.rs  favorites.rs  graph.rs  inbox.rs  mod.rs  node_links.rs  nodes.rs  notes.rs  permissions.rs  search.rs  share.rs  tags.rs  tasks.rs  templates.rs  versions.rs  webhooks.rs
ui/src/components/: activity_panel.rs  admin_view.rs  attachment_panel.rs  bulk_permissions_view.rs  calendar_view.rs  carryover.rs  change_password_modal.rs  dark_mode_toggle.rs  favorites_section.rs  graph_view.rs  icon_button.rs  inbox_triage.rs  inbox_view.rs  layout.rs  links_panel.rs  local_graph.rs  mod.rs  my_day_view.rs  new_task_form.rs  node_editor.rs  node_list.rs  node_meta.rs  node_picker.rs  node_view.rs  note_panel.rs  notes_view.rs  permission_dialog.rs  plan_view.rs  project_dashboard.rs  public_share_view.rs  resizable_editor.rs  search_bar.rs  search_view.rs  share_panel.rs  sidebar.rs  skeleton.rs  tag_bar.rs  tag_manager.rs  task_common.rs  task_panel.rs  (+6 more)
ui/src/components/modals/: add_favorite.rs  command_palette.rs  create_node.rs  delete_confirm.rs  fast_capture.rs  help.rs  mod.rs
