[workspace]
members  = ["api", "ui", "common"]
# Exclude the WASM UI crate from host-target default builds.
# Use `cargo check -p ui --target wasm32-unknown-unknown` for the UI.
default-members = ["api", "common"]
resolver = "2"

# Zero-panic policy (.claude/POLICY.md §3), enforced as lints rather than left to
# code review. These are clippy *restriction* lints (allow-by-default), so they only
# bite under `cargo clippy` — `cargo build`/`check` are unaffected. Test code is
# exempted via `clippy.toml` (allow-*-in-tests). The sanctioned escape hatch for a
# genuinely-infallible/invariant case is a localised `#[allow(clippy::..)]` with a
# comment, NOT a blanket relaxation here. Each member opts in with `[lints] workspace
# = true`. UI context lookups use Leptos `expect_context` (not `.expect()`) — see
# `.claude/rules/leptos.md`.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

[workspace.dependencies]
# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow    = "1"

# Validation
garde = { version = "0.23", features = ["derive", "email"] }

# Async
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes      = "1"

# Async trait dispatch
async-trait = "0.1"

# Web framework
axum           = { version = "0.8", features = ["multipart"] }
tower-http     = { version = "0.7", features = ["cors", "trace", "timeout", "request-id", "propagate-header"] }
tower_governor = { version = "0.8", features = ["axum"] }

# OpenAPI
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Auth / JWT
# jsonwebtoken 10 has NO built-in crypto backend (unlike 9's bundled ring): a
# backend feature MUST be enabled or RS256 verification panics at runtime
# ("Could not automatically determine the process-level CryptoProvider …").
# We pin `aws_lc_rs` — the provider rustls/the AWS SDK already use (.claude/rules/api.md),
# so the tree stays single-crypto — and deliberately NOT `rust_crypto`, which would
# pull the pure-Rust `rsa` crate (RUSTSEC-2023-0071, Marvin timing). (v2.20.2)
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest      = { version = "0.13", features = ["json", "form"] }
axum-extra   = { version = "0.12", features = ["cookie-private"] }
urlencoding  = "2"
hex          = "0.4"
hmac         = "0.13"
rand         = "0.9"
sha2         = "0.11"
base64       = { version = "0.22", features = ["alloc"] }

# Common domain types
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.dist]
inherits = "release"
lto      = "thin"
