[package]
name       = "api"
version = "2.22.3"
edition    = "2024"
repository = "https://github.com/jchultarsky/ember-trove"
license    = "MIT"
# Self-hosted application crate — never published to a registry (`publish = false`),
# though the source is MIT-licensed (repo LICENSE). cargo-deny still skips license
# checks on private workspace crates; see deny.toml `[licenses].private`.
publish = false

[lints]
workspace = true

[features]
# E2E auth bypass for Playwright smoke tests — see e2e/README.md.
#
# SECURITY: never enable this feature in a release artifact. The production
# Dockerfile (deploy/Dockerfile.api) builds without features, so the bypass
# code is not present in shipped binaries; even when compiled in, it must
# additionally be armed at runtime with E2E_AUTH_BYPASS=1.
e2e-bypass = []
# Repo-layer tests against a real PostgreSQL (api/src/repo/pg_tests.rs).
# Feature-gated so the default `cargo test` run (and the pre-push hook) needs
# no database; enable with DATABASE_URL set:
#   cargo test -p api --features pg-tests
pg-tests = []

[dependencies]
common             = { path = "../common" }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
bytes              = { workspace = true }
async-trait        = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
tower_governor     = { workspace = true }
utoipa             = { workspace = true, features = ["uuid", "chrono"] }
utoipa-swagger-ui  = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
garde              = { workspace = true }
jsonwebtoken       = { workspace = true }
reqwest            = { workspace = true }
axum-extra         = { workspace = true }
urlencoding        = { workspace = true }
hex                = { workspace = true }
hmac               = { workspace = true }
rand               = { workspace = true }
sha2               = { workspace = true }
base64             = { workspace = true }

# AWS SDKs — S3 object storage + Cognito user management + SES email.
#
# `default-features = false` on the SDK crates drops their legacy `rustls`
# feature (= aws-smithy-runtime `tls-rustls` → hyper-rustls 0.24 / rustls 0.21 /
# rustls-webpki 0.101.7, the source of RUSTSEC-2026-0049/0098/0099/0104). We
# re-enable the remaining defaults and keep `default-https-client`, which uses
# the modern rustls 0.23 + aws-lc-rs stack (already in the tree via reqwest).
# aws-config's own default already selects the modern client, so it is left as-is.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "default-https-client", "rt-tokio"] }
aws-sdk-cognitoidentityprovider = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sesv2 = { version = "1", default-features = false, features = ["sigv4a", "default-https-client", "rt-tokio"] }

# Backup archive (tar + gzip) and ZIP export
tar    = "0.4"
flate2 = "1"
zip    = "8"

sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

[dev-dependencies]
tower          = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
