[package]
name       = "ui"
version    = "0.1.0"
edition    = "2024"
repository = "https://github.com/jchultarsky101/ember-trove"
# Self-hosted application crate — never published (see api/Cargo.toml rationale).
publish = false

[package.metadata.dist]
dist = false

[lints]
workspace = true

[dependencies]
common      = { path = "../common" }
leptos        = { version = "0.8.19", features = ["csr"] }
leptos_router = { version = "0.8" }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = "0.1"
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
gloo-net    = { version = "0.7", features = ["http"] }
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "ClipboardEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "Document",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "SvgElement",
    "SvgsvgElement",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WheelEvent",
    "Storage",
    "Window",
    "History",
    "Location",
    "Url",
    "UrlSearchParams",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "ScrollLogicalPosition",
    "DomTokenList",
] }
js-sys = "0.3"
chrono = { workspace = true, features = ["wasmbind"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ammonia = "4"
# uuid needs its `js` feature to use crypto.getRandomValues on WASM
uuid = { workspace = true, features = ["js"] }
